# acore

./: CMakeLists.txt
.github/workflows/: main.yml
doc/: Doxyfile
doc/puml/: AsyncManager.puml  utility.puml
include/: AsyncManager.hpp  CMakeLists.txt
include/utility/: CMakeLists.txt  Timer.hpp  Trigger.hpp  TriggerFd.hpp  Triggerable.hpp
src/: AsyncManager.cpp  CMakeLists.txt
src/utility/: CMakeLists.txt  Timer.cpp  Trigger.cpp  TriggerFd.cpp  Triggerable.cpp
